--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "webconsol/php-data-models": "1.0.0"
     },
     "autoload": {
         "psr-0" : {
