--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     ],
     "require": {
         "php": ">=7.0",
-        "webconsol/php-data-models": "1.0.0"
+        "webconsol/php-data-models": "1.0.0",
+        "ext-json": "^1.6"
     },
     "autoload": {
         "psr-0" : {
